Fix scrolling on mobile

--- a/client/src/components/ParticlesBackground/ParticlesBackground.css
+++ b/client/src/components/ParticlesBackground/ParticlesBackground.css
@@ -13,4 +13,5 @@ canvas {
   background-size: 20%; 
   background-position: 50% 50%; 
   z-index: 0;
+  overflow: hidden;
 }
