--- a/client/src/components/ViewProjectsButton/ViewProjectsButton.css
+++ b/client/src/components/ViewProjectsButton/ViewProjectsButton.css
@@ -31,7 +31,7 @@
 
 @media (max-width: 425px) {
   .view-projects-button {
-    width: 90vw;
+    width: 95vw;
     height: 3rem;
   }
 }
